# gaga-cpp

./: CMakeLists.txt  README.md
lib/protobuf-lite/: CMakeLists.txt
lib/protobuf-lite/google/protobuf/io/: zero_copy_stream_impl_lite.cc
lib/raknet/: RakNet_VS2008.sln  UpgradeLog.htm
lib/raknet/DependentExtensions/IrrlichtDemo/: IrrlichtDemo.v8.vcxproj  IrrlichtDemo.v8.vcxproj.filters
lib/raknet/DependentExtensions/Ogre3DInterpDemo/: Ogre3DInterpDemo.vcxproj  Ogre3DInterpDemo.vcxproj.filters
lib/raknet/DependentExtensions/SQLite3Plugin/: SQLite3Plugin.vcxproj  SQLite3Plugin.vcxproj.filters
lib/raknet/Lib/: RakNet_VS2008_DLL_Debug_Win32.exp  RakNet_VS2008_DLL_Debug_Win32.idb  RakNet_VS2008_DLL_Debug_Win32.lib  RakNet_VS2008_LibStatic_Debug_Win32.idb
lib/raknet/Lib/DLL/: DLL_vc9.vcxproj
lib/raknet/Lib/JanssonStatic/: JanssonStatic_vc9.vcxproj
lib/raknet/Lib/LibStatic/: LibStatic_vc9.vcxproj
lib/raknet/Lib/MiniupnpcStatic/: MiniupnpcStatic_vc9.vcxproj
lib/raknet/Samples/AutoPatcherServer_MySQL/: AutopatcherServer_MySQL.vcxproj  AutopatcherServer_MySQL.vcxproj.filters
lib/raknet/Samples/AutopatcherClient/: AutopatcherClient_vc9.vcxproj  AutopatcherClient_vc9.vcxproj.filters
lib/raknet/Samples/AutopatcherClientGFx3.0/: AutopatcherClientGFx3.0_vc9.vcxproj  AutopatcherClientGFx3.0_vc9.vcxproj.filters
lib/raknet/Samples/AutopatcherClientRestarter/: AutopatcherClientRestarter_vc9.vcxproj
lib/raknet/Samples/AutopatcherClient_SelfScaling/: AutopatcherClient_SelfScaling_vc9.vcxproj  AutopatcherClient_SelfScaling_vc9.vcxproj.filters
lib/raknet/Samples/AutopatcherServer/: AutopatcherServer_vc9.vcxproj  AutopatcherServer_vc9.vcxproj.filters
lib/raknet/Samples/AutopatcherServer_SelfScaling/: AutopatcherServer_SelfScaling_vc9.vcxproj  AutopatcherServer_SelfScaling_vc9.vcxproj.filters
lib/raknet/Samples/BigPacketTest/: BigPacketTest_vc9.vcxproj
lib/raknet/Samples/BurstTest/: BurstTest_vc9.vcxproj  BurstTest_vc9.vcxproj.filters
lib/raknet/Samples/Chat Example/: Chat Example Client_vc9.vcxproj  Chat Example Server_vc9.vcxproj
lib/raknet/Samples/CloudClient/: CloudClient_vc9.vcxproj
lib/raknet/Samples/CloudServer/: CloudServer_vc9.vcxproj
lib/raknet/Samples/CloudTest/: CloudTest_vc9.vcxproj
lib/raknet/Samples/CommandConsoleClient/: CommandConsoleClient_vc9.vcxproj
lib/raknet/Samples/CommandConsoleServer/: CommandConsoleServer_vc9.vcxproj
lib/raknet/Samples/ComprehensivePCGame/: ComprehensivePCGame_vc9.vcxproj  ComprehensivePCGame_vc9.vcxproj.filters
lib/raknet/Samples/ComprehensiveTest/: ComprehensiveTest_vc9.vcxproj
lib/raknet/Samples/CrashReporter/: CrashReporter_vc9.vcxproj
lib/raknet/Samples/CrossConnectionTest/: CrossConnectionTest_vc9.vcxproj
lib/raknet/Samples/DirectoryDeltaTransfer/: DirectoryDeltaTransfer_vc9.vcxproj
lib/raknet/Samples/Dropped Connection Test/: DroppedConnectionTest_vc9.vcxproj
lib/raknet/Samples/Encryption/: Encryption_vc9.vcxproj
lib/raknet/Samples/FCMHost/: FCM2Host.vcxproj
lib/raknet/Samples/FCMHostSimultaneous/: FCM2HostSimultaneous.vcxproj
lib/raknet/Samples/FCMVerifiedJoinSimultaneous/: FCM2VerifiedJoinSimultaneous.vcxproj
lib/raknet/Samples/FileListTransfer/: FileListTransfer.vcxproj
src/: CMakeLists.txt
src/client/: CMakeLists.txt  gaga_client.cpp  gaga_client.h  main.cpp
src/common/: gaga_util.cpp  gaga_util.h  object_pool.h
src/proto/: CMakeLists.txt
src/proto/protomsg/: GameMsg.pb.cc  GameMsg.pb.h
src/proto/protosrc/: GameMsg.proto
src/server/: CMakeLists.txt  gaga_client_agent.cpp  gaga_client_agent.h  gaga_player.cpp  gaga_player.h  gaga_room.cpp  gaga_room.h  gaga_server.cpp  gaga_server.h  gaga_timer.cpp  gaga_timer.h  main.cpp  task_pool.cpp  task_pool.h
(+63 files in other folders)
